{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 46,
  "lineage": "709c7db5-3be6-ffaf-b747-d883a5e3d801",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bufstream",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bufstream-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:security-group/sg-0296ce05c9a1c4d1f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0296ce05c9a1c4d1f",
            "ingress": [],
            "name": "bufstream-xcnouscpzi",
            "name_prefix": "",
            "owner_id": "471112525758",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "random_string.deployment_id"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e14674587e814a0e",
            "arn": "arn:aws:ec2:us-east-1:471112525758:elastic-ip/eipalloc-0e14674587e814a0e",
            "domain": "vpc",
            "id": "eipalloc-0e14674587e814a0e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-145-138-115.compute-1.amazonaws.com",
            "public_ip": "54.145.138.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "joey-vpc-name-us-east-1a-natgw"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1a-natgw"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.bufstream",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023d404a4ac5e1f65",
            "arn": "arn:aws:ec2:us-east-1:471112525758:elastic-ip/eipalloc-023d404a4ac5e1f65",
            "domain": "vpc",
            "id": "eipalloc-023d404a4ac5e1f65",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-206-104-129.compute-1.amazonaws.com",
            "public_ip": "34.206.104.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "joey-vpc-name-us-east-1b-natgw"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1b-natgw"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.bufstream",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027902f8bcc61502f",
            "arn": "arn:aws:ec2:us-east-1:471112525758:elastic-ip/eipalloc-027902f8bcc61502f",
            "domain": "vpc",
            "id": "eipalloc-027902f8bcc61502f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-87-79-77.compute-1.amazonaws.com",
            "public_ip": "98.87.79.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "joey-vpc-name-us-east-1c-natgw"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1c-natgw"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.bufstream",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bufstream",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:internet-gateway/igw-09d942efc1d554ae8",
            "id": "igw-09d942efc1d554ae8",
            "owner_id": "471112525758",
            "tags": {
              "Name": "joey-vpc-name-igw"
            },
            "tags_all": {
              "Name": "joey-vpc-name-igw"
            },
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bufstream",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e14674587e814a0e",
            "association_id": "eipassoc-00c5090bced81549f",
            "connectivity_type": "public",
            "id": "nat-0b3389a4a10179680",
            "network_interface_id": "eni-01e6e755d54be8257",
            "private_ip": "10.64.29.218",
            "public_ip": "54.145.138.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-006aeba5fb9068fe3",
            "tags": {
              "Name": "joey-vpc-name-us-east-1a"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1a"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.bufstream",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023d404a4ac5e1f65",
            "association_id": "eipassoc-00b0ad98a3e8160a2",
            "connectivity_type": "public",
            "id": "nat-0e6391ef99a7c1531",
            "network_interface_id": "eni-0c9c145c398913637",
            "private_ip": "10.64.39.149",
            "public_ip": "34.206.104.129",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a5856c8cd33affdd",
            "tags": {
              "Name": "joey-vpc-name-us-east-1b"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1b"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.bufstream",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027902f8bcc61502f",
            "association_id": "eipassoc-00ce0f3d5ef4316aa",
            "connectivity_type": "public",
            "id": "nat-09028917474acfba3",
            "network_interface_id": "eni-0191c0f5e85740fc2",
            "private_ip": "10.64.40.79",
            "public_ip": "98.87.79.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04ff424803d317a8d",
            "tags": {
              "Name": "joey-vpc-name-us-east-1c"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1c"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.bufstream",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00b9cc50effc5e52a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b3389a4a10179680",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b9cc50effc5e52a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.bufstream",
            "module.network.aws_nat_gateway.bufstream",
            "module.network.aws_route_table.private_route_tables",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0aa70a1d79ef22bbc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e6391ef99a7c1531",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aa70a1d79ef22bbc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.bufstream",
            "module.network.aws_nat_gateway.bufstream",
            "module.network.aws_route_table.private_route_tables",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d40fb484b6b190621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09028917474acfba3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d40fb484b6b19062",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.bufstream",
            "module.network.aws_nat_gateway.bufstream",
            "module.network.aws_route_table.private_route_tables",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09d942efc1d554ae8",
            "id": "r-rtb-0858adeab88fb34151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0858adeab88fb3415",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.bufstream",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_vpc.bufstream_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:route-table/rtb-00b9cc50effc5e52a",
            "id": "rtb-00b9cc50effc5e52a",
            "owner_id": "471112525758",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "joey-vpc-name-10.64.0.0/21-private"
            },
            "tags_all": {
              "Name": "joey-vpc-name-10.64.0.0/21-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:route-table/rtb-0aa70a1d79ef22bbc",
            "id": "rtb-0aa70a1d79ef22bbc",
            "owner_id": "471112525758",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "joey-vpc-name-10.64.8.0/21-private"
            },
            "tags_all": {
              "Name": "joey-vpc-name-10.64.8.0/21-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:route-table/rtb-0d40fb484b6b19062",
            "id": "rtb-0d40fb484b6b19062",
            "owner_id": "471112525758",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "joey-vpc-name-10.64.16.0/21-private"
            },
            "tags_all": {
              "Name": "joey-vpc-name-10.64.16.0/21-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:route-table/rtb-0858adeab88fb3415",
            "id": "rtb-0858adeab88fb3415",
            "owner_id": "471112525758",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "joey-vpc-name-public"
            },
            "tags_all": {
              "Name": "joey-vpc-name-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d34a184717c8a6b",
            "route_table_id": "rtb-00b9cc50effc5e52a",
            "subnet_id": "subnet-043eed465d82c640e"
          },
          "dependencies": [
            "module.network.aws_route_table.private_route_tables",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02327980517c613c5",
            "route_table_id": "rtb-0aa70a1d79ef22bbc",
            "subnet_id": "subnet-0889f88e1c8967d67"
          },
          "dependencies": [
            "module.network.aws_route_table.private_route_tables",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6b506fd0134447d",
            "route_table_id": "rtb-0d40fb484b6b19062",
            "subnet_id": "subnet-0346f2d3c6d26bc70"
          },
          "dependencies": [
            "module.network.aws_route_table.private_route_tables",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ccbda7b70163d75",
            "route_table_id": "rtb-0858adeab88fb3415",
            "subnet_id": "subnet-006aeba5fb9068fe3"
          },
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9619f7af6efb89d",
            "route_table_id": "rtb-0858adeab88fb3415",
            "subnet_id": "subnet-0a5856c8cd33affdd"
          },
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0293980fe4abce951",
            "route_table_id": "rtb-0858adeab88fb3415",
            "subnet_id": "subnet-04ff424803d317a8d"
          },
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:subnet/subnet-043eed465d82c640e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.64.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043eed465d82c640e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112525758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joey-vpc-name-us-east-1a-10.64.0.0/21-private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1a-10.64.0.0/21-private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:subnet/subnet-0889f88e1c8967d67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.64.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0889f88e1c8967d67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112525758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joey-vpc-name-us-east-1b-10.64.8.0/21-private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1b-10.64.8.0/21-private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:subnet/subnet-0346f2d3c6d26bc70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.64.16.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0346f2d3c6d26bc70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112525758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joey-vpc-name-us-east-1c-10.64.16.0/21-private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1c-10.64.16.0/21-private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:subnet/subnet-006aeba5fb9068fe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.64.24.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006aeba5fb9068fe3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112525758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joey-vpc-name-us-east-1a-10.64.24.0/21-public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1a-10.64.24.0/21-public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:subnet/subnet-0a5856c8cd33affdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.64.32.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5856c8cd33affdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112525758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joey-vpc-name-us-east-1b-10.64.32.0/21-public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1b-10.64.32.0/21-public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:subnet/subnet-04ff424803d317a8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.64.40.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ff424803d317a8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112525758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joey-vpc-name-us-east-1c-10.64.40.0/21-public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "joey-vpc-name-us-east-1c-10.64.40.0/21-public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bufstream_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:vpc/vpc-05abeb1ae0eba891f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.64.0.0/16",
            "default_network_acl_id": "acl-08f5d2f987cd447cc",
            "default_route_table_id": "rtb-0b9b42667c3ba3d85",
            "default_security_group_id": "sg-0de677c4fbe334876",
            "dhcp_options_id": "dopt-07af3c242f925c220",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05abeb1ae0eba891f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9b42667c3ba3d85",
            "owner_id": "471112525758",
            "tags": {
              "Name": "joey-vpc-name"
            },
            "tags_all": {
              "Name": "joey-vpc-name"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:vpc-endpoint/vpce-0a093c4499b2af48b",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0a093c4499b2af48b",
            "owner_id": "471112525758",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.network.data.aws_region.this"
          ]
        }
      ]
    },
    {
      "module": "module.postgres[0]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "buf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:vpc/vpc-05abeb1ae0eba891f",
            "cidr_block": "10.64.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bbde940ff9102f74",
                "cidr_block": "10.64.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-07af3c242f925c220",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05abeb1ae0eba891f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b9b42667c3ba3d85",
            "owner_id": "471112525758",
            "tags": {
              "Name": "joey-vpc-name"
            }
          }
        }
      ]
    },
    {
      "module": "module.postgres[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112525758:security-group/sg-081d629e09572f3ef",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-081d629e09572f3ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.64.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "wtvdwnhpugwkrjvn-rds-sg",
            "name_prefix": "",
            "owner_id": "471112525758",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05abeb1ae0eba891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.bufstream_vpc",
            "module.postgres.data.aws_vpc.buf",
            "module.postgres.random_string.rds_identifier"
          ]
        }
      ]
    }
  ]
}